# recon-magic-framework

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  AI Orchestration.md  CLAUDE.md  CampaignsNotes.MD  Dockerfile  Dockerfile Security.md  Error Scenarios.md  Idea.MD  MERGE_REPORT.md  Merge Systems.md  Notes.MD  Nudge System.md  README.md  Recon Pro Fuzzing Deep Integration.md  Runner Merge Plan.md  TODO.MD  build_project.sh  cli.py  covg-scoring.md  decision.py  entrypoint.sh  globalnotes.md  langgraph.json  main.py  model_decision.py  opencode.json  package-lock.json  package.json  pyproject.toml  runner.py  security.md  server.py  setup-decisions.json  setup.py  task.py  temp.txt  (+5 more)
.claude/agents/: audit-naive-phase-0.md  audit-naive-phase-0_OTHER.md  audit-naive-phase-1.md
.github/workflows/: backend-ci.yml  backend-staging-ci.yml  ci.yml  docker-build-push.yml  production.yml  runner-ci.yml  runner-staging-ci.yml  staging-ci.yml  staging.yml
agent/: graph.py  nodes.py  utils.py
agents/: __init__.py  audit_graph.py  nodes.py
agents/utilities/: decision.py  nodes.py  task.py  utils.py
backend/: README.md  WIP-ReleaseNotes.MD  WIP.MD  _Composition Prerequisites.MD  package.json
backend/src/: recipes.ts  types.ts  utils.ts
core/: decision.py  git_commit.py  model_decision.py  path_utils.py  task.py
docs/: deployment.md  tool-json-formats.md
infrastructure/: .terraform.lock.hcl  backend.production.tf  backend.staging.tf  backend.tf  main.tf  output.tf  terraform.tfvars  vars.tf
log_formatters/: claude_code.py  opencode.py
looper/: looper.py  pyproject.toml
prisma/: schema.prisma
programs/: README.md  increase_counter.py
prompts/: Deployment Decision.MD  README.md  audit-template.md  clamping-handler-rules.md  invariant-workshop.md  objective-coverage.md  opencode.json  reading-coverage.md  settings.local.json  setup_primer.md  styleguide.md  tools.md  v2-architecture-proposal.md
prompts/agent/: audit-naive-phase-0.md  audit-naive-phase-1.md  audit-naive-phase-2.md  audit-naive-phase-3.md  audit-naive-phase-4.md  audit-naive-phase-5.md  audit-naive-phase-6.md  chimera-test-linter.md  compilation-debugging-agent.md  coverage-phase-0.md  coverage-phase-1.md  coverage-phase-2.md  coverage-phase-3.md  coverage-phase-4.md  coverage-phase-5.md  coverage.md  first-audit-phase-0.md  first-audit-phase-1.md  first-audit-phase-2.md  first-audit-phase-3.md  first-audit-phase-4.md  first-audit-phase-5.md  fix-compilation-errors.md  fix-echidna-failures.md  generate-failure-report.md  pre-audit-phase-0.md  pre-audit-phase-1.md  pre-audit-phase-10.md  (+64 more)
runner/: .gitignore  README.md  package.json  run_halmos.sh  tsconfig.json
server/: __init__.py  github.py  jobs.py  postprocess.py  setup.py  utils.py
src/: index.ts  samples.ts  sanitizePreprocess.ts
studio/: editor-dynamic.js  editor.js  index.html  test-parser.html  type-parser.js
tests/: test_mock_backend.py
tools/: __init__.py
tools/covg_eval/: README.md  __init__.py  covg_eval.py  pyproject.toml
tools/covg_scoring/: README.md  __init__.py  covg_scoring.py  pyproject.toml
tools/filter_build_info/: README.md  __init__.py  filter_build_info.py  pyproject.toml
tools/merge_paths_prerequisites/: README.md  __init__.py  merge_paths_prerequisites.py  pyproject.toml
tools/update_coverage_groups/: README.md  __init__.py  pyproject.toml  update_coverage_groups.py
workflow_descriptions/: workflow-io-specification-coverage.md  workflow-io-specification-scouting.md  workflow-io-specification-setup.md
workflows/: audit.json  compose-coverage-properties.json  compose-scout-setup-coverage.json  compose-scout-setup-properties-coverage.json  compose-scout-setup-v2.json  compose-setup-coverage.json  compose-setup-properties-coverage.json  test-composition-sub.json  test-composition.json  test_digest_workflow.json  test_missing_file_workflow.json  workflow-compile-and-fuzz.json  workflow-echidna-example.json  workflow-fuzz-only.json  workflow-fuzzing-coverage-short.json  workflow-fuzzing-coverage-superform.json  workflow-fuzzing-coverage.json  workflow-fuzzing-scouting-v2.json  workflow-fuzzing-scouting.json  workflow-fuzzing-setup-v2.json  workflow-fuzzing-setup.json  workflow-gates.json  workflow-jump-example.json  workflow-loop.json  workflow-properties-efficient-v3.4.json  workflow-properties-efficient-v3.5.json  workflow-properties-efficient-v3.6.json  workflow-properties-efficient-v3.7.json  workflow-properties-efficient-v3.8.json  workflow-properties-efficient-v3.json  workflow-properties-efficient-v4.0-claude.json  workflow-properties-efficient-v4.0.json  workflow-properties-full-opus.json  workflow-properties-full.json  workflow-properties-partial-from-setup.json  workflow-skip.json  workflow.json  workflow_audit.json  workflow_stop.json
(+138 files in other folders)
