[project]
name = "recon-magic"
version = "0.1.0"
description = "Smart contract audit workflow automation framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.0.0",
]

[project.scripts]
recon = "cli:main"
extract-target-functions = "tools.targeted_functions.extract_target_functions:main"
filter-build-info = "tools.filter_build_info.filter_build_info:main"
order-prerequisite-func = "tools.order_prerequisite_func.order_prerequisite_func:main"
touched-function-identifier = "tools.touched_function_identifier.touched_function_identifier:main"
covg-eval = "tools.covg_eval.covg_eval:main"
save-echidna-logs = "tools.save_echidna_logs.save_echidna_logs:main"
merge-paths-prerequisites = "tools.merge_paths_prerequisites.merge_paths_prerequisites:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
