[project]
name = "claude-looper"
version = "0.1.0"
description = "Simple CLI to repeat Claude Code prompts X times"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
looper = "looper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["looper.py"]
