[project]
name = "covg-scoring"
version = "0.1.0"
description = "Coverage scoring tool that adds cyclomatic complexity to coverage analysis"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
covg-scoring = "covg_scoring:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
