[project]
name = "filter-build-info"
version = "0.1.0"
description = "Filter Forge build-info JSON to remove sources without AST data"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
filter-build-info = "filter_build_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
