[project]
name = "merge-paths-prerequisites"
version = "0.1.0"
description = "Tool to merge paths and prerequisites for target functions"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
merge-paths-prerequisites = "merge_paths_prerequisites:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
